# libsamsung-ipc

./: .gitignore  AUTHORS  Android.mk  Makefile  Makefile.am  call.c  configure.ac  hexdump.c  hexdump.h  ipc.c  ipc_util.c  misc.c  net.c  radio.c  radio_internal.h  samsung-ipc-1.0.pc.in  sim.c  sms.c  test.c  util.c
devices/crespo/: nv_data.h
devices/h1/: ipc.c  ipc.h
include/: Makefile.am  call.h  disp.h  gen.h  gprs.h  misc.h  net.h  pwr.h  radio.h  sec.h  sms.h  types.h  util.h
include/device/crespo/: call.h  gen.h  misc.h  net.h  sms.h
include/device/h1/: call.h  gen.h  misc.h  net.h  sms.h
samsung-ipc/: Makefile.am  call.c  crespo_ipc.c  crespo_ipc.h  gprs.c  h1_ipc.c  ipc.c  ipc.h  ipc_private.h  ipc_util.c  misc.c  net.c  sec.c  test.c  util.c
samsung-ipc/device/crespo/: crespo_ipc.c  crespo_ipc.h  crespo_nv_data.c  crespo_nv_data.h
samsung-ipc/device/h1/: h1_ipc.c  h1_ipc.h
samsung-ipc/devices/crespo/: ipc.h  nv_data.c
samsung-ipc/devices/h1/: ipc.h
tools/: Makefile.am  modemctrl.c
vapi/: samsung-ipc-1.0.vapi
