NULL =

samsung_ipcincludedir = $(includedir)/samsung-ipc-1.0/
samsung_ipcinclude_HEADERS = \
	call.h \
	disp.h \
	gen.h \
	misc.h \
	net.h \
	radio.h \
	sec.h \
	sms.h \
	pwr.h \
	types.h \
	util.h \
	gprs.h \
	$(NULL)

samsung_ipc_h1includedir = $(includedir)/samsung-ipc-1.0/device/h1/
samsung_ipc_h1include_HEADERS = \
	device/h1/net.h \
	device/h1/misc.h \
	device/h1/gen.h
	$(NULL)

samsung_ipc_crespoincludedir = $(includedir)/samsung-ipc-1.0/device/crespo/
samsung_ipc_crespoinclude_HEADERS = \
	device/crespo/net.h \
	device/crespo/sms.h \
	device/crespo/misc.h \
	device/crespo/gen.h \
	$(NULL)
